<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/cardViewMealDetails"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="78dp"
            android:background="@drawable/background_item"
            app:cardCornerRadius="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mealDetailsImage"
            app:layout_constraintVertical_bias="0.0" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/mealDetailsImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/textViewMealCateItemDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/txtViewMealNameItemDetails"
            app:layout_constraintStart_toStartOf="@+id/txtViewMealNameItemDetails"
            app:layout_constraintTop_toBottomOf="@+id/txtViewMealNameItemDetails"
            tools:text="Beef category" />

        <TextView
            android:id="@+id/textViewMealCountryItemDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/barrier2"
            app:layout_constraintEnd_toEndOf="@+id/textViewMealCateItemDetails"
            app:layout_constraintStart_toStartOf="@+id/textViewMealCateItemDetails"
            app:layout_constraintTop_toBottomOf="@+id/textViewMealCateItemDetails"
            tools:text="Italian food" />

        <ImageView
            android:id="@+id/imageViewAddToCalendarItemDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/baseline_edit_calendar_24"
            app:layout_constraintBottom_toBottomOf="@+id/textViewMealCountryItemDetails"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewMealCateItemDetails"
            app:layout_constraintTop_toTopOf="@+id/textViewMealCateItemDetails" />

        <ImageView
            android:id="@+id/imageViewAddToFavITemDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/favorite_dark"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewAddToCalendarItemDetails"
            app:layout_constraintEnd_toStartOf="@+id/textViewMealCateItemDetails"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewAddToCalendarItemDetails"
            app:layout_constraintVertical_bias="1.0"
            />

        <TextView
            android:id="@+id/txtViewMealNameItemDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mealDetailsImage"
            tools:text="Beef and Mustard Pie dsfasd adsfasdf af asf dfsa asd" />

        <TextView
            android:id="@+id/textViewIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/textViewIngredients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier2" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="txtViewMealNameItemDetails,imageViewAddToFavITemDetails,imageViewAddToCalendarItemDetails,textViewMealCountryItemDetails,textViewMealCateItemDetails"
            tools:layout_editor_absoluteY="364dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewIngredientsItemDetails"
            android:layout_width="0dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/cardViewMealDetails"
            app:layout_constraintStart_toStartOf="@+id/cardViewMealDetails"
            app:layout_constraintTop_toBottomOf="@+id/textViewIngredients"
            tools:itemCount="10"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/ingredients_meal_details"
            tools:orientation="horizontal" />

        <TextView
            android:id="@+id/textViewProced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/procedure"
            app:layout_constraintStart_toStartOf="@+id/textViewIngredients"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewIngredientsItemDetails" />

        <TextView
            android:id="@+id/textViewProcedures"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/textViewProced"
            app:layout_constraintTop_toBottomOf="@+id/textViewProced"
            tools:text="@string/textViewProcedures" />

        <TextView
            android:id="@+id/textViewVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textViewVideo"
            app:layout_constraintStart_toStartOf="@+id/textViewProced"
            app:layout_constraintTop_toBottomOf="@+id/textViewProcedures" />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ytPlayer"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/youtube_background"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/textViewVideo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>